# sage

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  compile.py  compile_commands.json  foldercopy.py  meson.build  projects.json  wincross.ini
app/: inputFuncs.c  inputFuncs.h  inputKeys.h  main.c  meson.build  project.json  resourceBindings.h  transformObjects.h
app/cfg/: app.json  contexts.json  files.json  graphicsSettings.json  res.json  scenes.json
app/data/: data.json  dataGenerated.json  entities.json
app/shaders/: chaletShader.frag  chaletShader.frag.spv  chaletShader.vert  chaletShader.vert.spv  lightSourceShader.frag  lightSourceShader.frag.spv  lightSourceShader.vert  lightSourceShader.vert.spv  lightingShader.vert  lightingShader.vert.spv  myriamShader.frag  myriamShader.frag.spv  myriamShader.vert  myriamShader.vert.spv
assetsys/: main.c  meson.build  sg_assets.c  sg_assets.h
cfg/: contexts.json
include/: sage.h  sage_camera.h  sage_core.h  sage_entt.h  sage_input.h  sage_jobs.h  sage_log.h  sage_math.h  sage_phys.h  sage_platform.h  sage_rend.h  sage_res.h  sage_scene.h  sage_types.h  sage_window.h
lib/: meson.build
shaders/: Makefile  mesh3.frag  mesh3.frag.spv  mesh3.vert  mesh3.vert.spv
src/: meson.build
src/base/: meson.build  sage_base.c  sage_base.h  sg_base.c  sg_base.h  sg_types.h
src/camera/: meson.build  sg_camera.c  sg_camera.h
src/input/: meson.build  sg_input.c  sg_input.h
src/jobs/: meson.build  sg_jobs.c  sg_jobs.h
src/log/: meson.build  sage_log.c  sage_log.h  sg_log.c  sg_log.h
src/math/: meson.build  sg_math.c  sg_math.h
src/rend/: meson.build  sg_rend.c  sg_rend.h
src/rend/allocator/: sg_rend_allocator.c  sg_rend_allocator.h
src/rend/command/: sg_rend_command.c  sg_rend_command.h
src/rend/debug/: sg_rend_debug.c  sg_rend_debug.h
src/rend/device/: sg_rend_device.c  sg_rend_device.h
src/rend/resource/: sg_resource.c  sg_resource.h
src/rend/surface/: sg_rend_surface.c  sg_rend_surface.h
src/res/: meson.build  sg_material.c  sg_material.h  sg_mesh.c  sg_mesh.h
src/scene/: meson.build  sg_scene.c  sg_scene.h
src/window/: meson.build  sg_window.c  sg_window.h
