sage_incs = []
sage_libs = []

subdir('base')
sage_incs += sgbase_inc
sage_libs += sgbase_lib
subdir('math')
sage_incs += sgmath_inc
sage_libs += sgmath_lib
subdir('rend')
sage_incs += sgrend_inc
sage_libs += sgrend_lib
subdir('res')
sage_incs += sgres_inc
sage_libs += sgres_lib
# entt_src = 
# jobs_src =


# phys_src =

