sage_incs = []
sage_libs = []

subdir('log')
sage_incs += sglog_inc
sage_libs += sglog_lib
subdir('base')
sage_incs += sgbase_inc
sage_libs += sgbase_lib
subdir('math')
sage_incs += sgmath_inc
sage_libs += sgmath_lib
subdir('res')
sage_incs += sgres_inc
sage_libs += sgres_lib
subdir('rend')
sage_incs += sgrend_inc
sage_libs += sgrend_lib
subdir('scene')
sage_incs += sgscene_inc
sage_libs += sgscene_lib
subdir('input')
sage_incs += sginput_inc
sage_libs += sginput_lib
subdir('window')
sage_incs += sgwindow_inc
sage_libs += sgwindow_lib
# entt_src = 
# jobs_src =


# phys_src =

